# RangeVecKV

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  vcpkg-configuration.json  vcpkg.json  更改需求.txt  需求文档
.github/workflows/: ci.yml
config/: model.prod.yaml  model.yaml  server.docker.yaml  server.prod.yaml  server.yaml
docs/: openapi.yaml  operations.md  testing.md
proto/: CMakeLists.txt  search.proto
scripts/: bootstrap_dev_env.sh  build_local.sh  download_ai_model.sh  healthcheck.sh  http_benchmark.py  http_smoke.sh  install_docker_and_run.sh  package_local.sh  perf_script_to_flamegraph.py  run_local_demo.sh  run_local_service.sh  stack_local.sh
src/: CMakeLists.txt
src/ai/: CMakeLists.txt  embedding_service.cpp  embedding_service.h
src/core/: CMakeLists.txt  document.cpp  document.h  kv_store.cpp  kv_store.h  persistence_codec.cpp  persistence_codec.h
src/gateway/: CMakeLists.txt  auth.cpp  auth.h  brpc_http_service.cpp  brpc_http_service.h  brpc_kv_benchmark.cpp  brpc_kv_write_service.cpp  brpc_kv_write_service.h  brpc_runtime.cpp  brpc_runtime.h  brpc_service_stub.cpp  brpc_service_stub.h  data_migration.cpp  data_migration.h  http_runtime.cpp  http_runtime.h  interceptors.cpp  interceptors.h  json_helpers.cpp  json_helpers.h  main.cpp  semantic_search_service.cpp  semantic_search_service.h  server.cpp  server.h  service_types.h  vector_index_outbox.cpp  vector_index_outbox.h
src/infra/: CMakeLists.txt  cluster_routing.cpp  cluster_routing.h  config.cpp  config.h  etcd_discovery.cpp  etcd_discovery.h  logging.cpp  logging.h  metrics.cpp  metrics.h  status.cpp  status.h  thread_pool.cpp  thread_pool.h  trace_context.cpp  trace_context.h
src/search/: CMakeLists.txt  vector_index.cpp  vector_index.h
test/: CMakeLists.txt  auth_test.cpp  brpc_kv_write_service_test.cpp  cluster_routing_test.cpp  config_loader_test.cpp  etcd_discovery_test.cpp  gateway_pipeline_test.cpp  http_gateway_smoke_test.cpp  kv_store_test.cpp  persistence_codec_test.cpp  thread_pool_test.cpp
vcpkg-overlay/ports/onnx/: portfile.cmake
